:construction: feat: create handleSubmit function | create the game page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script src="./assets/js/login.js" defer></script>
     
-    <title>Jogo da memória</title>
+    <title>Jogo da memória | Login</title>
 
 </head>
 <body>
