--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/login.css">
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/game.css">
 
     <script src="./assets/js/login.js" defer></script>
     
