:construction: feat: create the header style

--- a/assets/pages/game.html
+++ b/assets/pages/game.html
@@ -13,8 +13,16 @@
     <title>Jogo da memória</title>
 </head>
 <body>
+
+    <main>
+
+    <header>
+        <span class="player">Player: </span>
+        <span>Tempo: <span class="timer">00</span></span>
+    </header>
     
     <div class="grid"></div>
+    </main>
 
 </body>
 </html>
