:construction: feat: create the js rules for endgame

--- a/assets/pages/game.html
+++ b/assets/pages/game.html
@@ -17,12 +17,13 @@
     <main>
 
     <header>
-        <span class="player">Player: </span>
+        <span class="player"></span>
         <span>Tempo: <span class="timer">00</span></span>
     </header>
     
     <div class="grid"></div>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
